# upsidedown-chess-bot

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.sh  refactor_tests.patch  start.sh  tournament.sh
.github/workflows/: cmake.yml
benchmark/: benchmark.c
devel_inc/: devel_bot.h  devel_chess.h  devel_generator.h
inc/: benchmark.h  board.h  bot.h  chess.h  generator.h  hashtable.h  helper.h  list.h  main.h  move.h  param_config.h  pst.h  timemanagement.h  timer.h  tree.h  types.h  unit_test.h  unity.h
ml_trainer/: game_runner.py  generation.py  tournament.py  trainer.py
src/: benchmark.c  board.c  bot.c  chess.c  generator.c  hashtable.c  list.c  main.c  move.c  param_config.c  pst.c  timemanagement.c  timer.c  timer_test1.c  tree.c  types.c  unit_test.c  unity.c
test/: generator.h  test_bot.c  test_generator.c  test_hashtable.c  test_types.c  unit_test.c  unity.c
test/inc/: devel_bot.h  devel_chess.h  devel_generator.h  devel_hashtable.h  devel_types.h  test_bot.h  test_hashtable.h  test_types.h  unit_test.h  unity_internals.h
